--- a/ZodiacChart/app/src/main/res/layout/activity_main.xml
+++ b/ZodiacChart/app/src/main/res/layout/activity_main.xml
@@ -22,5 +22,13 @@
         android:layout_centerHorizontal="true"
         android:background="@color/colorOrange"
         android:text="two" />
+    <Button
+        android:id="@+id/design_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/second_ui"
+        android:layout_centerHorizontal="true"
+        android:background="@color/colorOrange"
+        android:text="view" />
 
 </RelativeLayout>
