--- a/ZodiacChart/app/src/main/res/layout/test.xml
+++ b/ZodiacChart/app/src/main/res/layout/test.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
+<com.example.fanxh.zodiacchart.TestView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
 
 
     <TextView
